made fixes on scrollbar for sidebar and main1 and 2

--- a/style.css
+++ b/style.css
@@ -24,8 +24,9 @@ body {
   background-color: red;
   text-align: center;
   font-size: 10px;
-  padding: 0 3px;
   position: absolute;
+  display: inline-flex;
+  justify-content: center;
   right: 15px;
 }
 
@@ -38,11 +39,10 @@ body {
 
 .over {
   overflow-y: scroll;
-  height: 150px;
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 2px;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -59,6 +59,15 @@ body {
   position: fixed;
   top: 60px;
   height: calc(100vh - 60px);
+  max-height: calc(100vh - 60px);
+}
+
+.side_bar-contents {
+  height: calc(100vh - 322px);
+}
+
+.test {
+  height: calc(100vh - 300px);
 }
 
 @media screen and (max-width: 1115px) {
